docs(md file image): fixed for display

--- a/프로젝트 - vanila Java로만 구현/프로젝트.md
+++ b/프로젝트 - vanila Java로만 구현/프로젝트.md
@@ -12,7 +12,7 @@
       - groupId: hello
       - artifactId: core Dependencies: 선택하지 않는다.
    - Gradle 전체 설정
-     ![how](images/2021-07-23-23-34-55.png)
+    ![image](images/2021-07-23-23-50-04.png)
 
       ``` Gradle
         plugins {
