build/test/doc(java/md): Java core & test added
body:
Java core MemberService/interface, MemberRepository/interface added.
Test code added for test.

Markdown files added for document.

--- a/프로젝트 - vanila Java로만 구현/Code-Folder/비즈니스 요구 사항.md
+++ b/프로젝트 - vanila Java로만 구현/Code-Folder/비즈니스 요구 사항.md
@@ -13,7 +13,7 @@
 
 <br>
 
-# 3. 요구사항의 분석
+# 3-1) 회원 요구사항의 분석
 ## a) 요구사항
 > 1. 회원 : 요구사항과 등급을 인터페이스로 구현하면 될 것
 > 2. 주문과 할인정책 :  
@@ -36,14 +36,34 @@
 ### 2) 클래스 다이어그램
 - 실제로 이대로 코딩하면 됨
 - 인터페이스와 구현체가 모임
+- 정적인 상태
 ![](images/2021-07-24-19-49-02.png)
 위의 구현 방식과 매칭되는 JAVA class를 실제 코딩하는 부분의 mapping
 interface + 구현체의 반복으로 코딩을 하여 만들 예정 - 외부 시스템은 일단 제외
 
 ### 3) 객체 다이어그램
 - 실제 서버로 올라갈 때, 객체간에 관계를 도식
+- 동적인 상태
 - **`동적으로 결정되는 것을 구체적으로 결정한 것`** &nbsp;이  
   _**클래스 다이어그램**과 다른 점_
 ![](images/2021-07-24-19-51-50.png)
 실제 객체 class 간의 참조 순서를 그린 것
 서버가 떠서, 클라이언트 객체가 실제로 참조하는 주소값에 있는 인스턴스는 "회원서비스(MemberServiceIml)", 이는 다시 메모리 회원저장소 클래스를 바라보고 있음
+
+<br>
+
+# 4. 회원 도메인 설계의 문제점
+- 이 코드의 설계상의 문제 : MemberServiceIml이 구현체 선택을 구현체로 선택하고 있음  
+  즉 구현으로 의존(할당 부분이)  
+  ![](images/2021-07-25-19-10-33.png)
+- 즉, 이 상태에서는 MemberServiceIml이 Open Closed Principle이 지켜지지 않는 상태
+- Dependency Inversion Principle도 역전, 구현체에 의존하게 되었음
+
+<br>
+
+# 5. 주문과 할인 도메인 설계
+## a) 주문과 할인 정책
+- 회원은 상품을 주문할 수 있다.
+- 회원 등급에 따라 할인 정책을 적용할 수 있다.
+- 할인 정책은 모든 VIP는 1000원을 할인해주는 고정 금액 할인을 적용해달라. (나중에 변경 될 수 있 다.)
+할인 정책은 변경 가능성이 높다. 회사의 기본 할인 정책을 아직 정하지 못했고, 오픈 직전까지 고민을 미루고 싶다. 최악의 경우 할인을 적용하지 않을 수 도 있다. (미확정)
