doc/build(md/java): Price & Order Service impl, cls added
body:
1) Price discount impl, class of Fixed discount selected
2) Order class, Order Service class that runs under client added

--- a/프로젝트 - vanila Java로만 구현/Code-Folder/비즈니스 요구 사항.md
+++ b/프로젝트 - vanila Java로만 구현/Code-Folder/비즈니스 요구 사항.md
@@ -13,7 +13,7 @@
 
 <br>
 
-# 3-1) 회원 요구사항의 분석
+# 3. 회원 요구사항의 분석
 ## a) 요구사항
 > 1. 회원 : 요구사항과 등급을 인터페이스로 구현하면 될 것
 > 2. 주문과 할인정책 :  
@@ -65,5 +65,29 @@ interface + 구현체의 반복으로 코딩을 하여 만들 예정 - 외부 시스템은 일단 제외
 ## a) 주문과 할인 정책
 - 회원은 상품을 주문할 수 있다.
 - 회원 등급에 따라 할인 정책을 적용할 수 있다.
-- 할인 정책은 모든 VIP는 1000원을 할인해주는 고정 금액 할인을 적용해달라. (나중에 변경 될 수 있 다.)
-할인 정책은 변경 가능성이 높다. 회사의 기본 할인 정책을 아직 정하지 못했고, 오픈 직전까지 고민을 미루고 싶다. 최악의 경우 할인을 적용하지 않을 수 도 있다. (미확정)
+- 할인 정책은 모든 VIP는 1000원을 할인해주는 고정 금액 할인을 적용해달라. (나중에 변경 될 수 있음)
+- 할인 정책은 변경 가능성이 높다. 회사의 기본 할인 정책을 아직 정하지 못했고, 오픈 직전까지 고민을 미루고 싶다.  
+  최악의 경우 할인을 적용하지 않을 수 도 있다. (미확정)
+
+<br>
+
+## b) 분석
+### 1) 주문 도메인 분석
+![](images/2021-07-26-22-58-05.png)
+- 주문 생성시, 위에서 구현한 회원 조회를 통해 회원을 조회, 등급에 따른 할인 적용
+- 과정
+  1) 주문생성 : 주문 서비스에 주문 생성 요청
+  2) 회원조회 : 할인을 위한 조회
+  3) 할인적용 : 할인여부 판별 할인 정책에 위임
+  4) 주문 결과 반환 : 할인을 적용한 주문 결과 반환
+  ※ DB에다가 실제 주문 저장해야 되지만, 예제 연습을 위해 생략
+
+### 2) 주문 클래스 다이어그램
+![](images/2021-07-26-23-03-01.png)
+- 마찬가지로 구현 역할 분리되었기 때문에, 구현체를 가져오는 클라이언트에서 구현체만 갈아끼우면 되는 상황  
+  이미 알지만, DIP OCP 클라이언트 레벨에서는 지켜지지 않고 있음
+
+### 3) 객체 다이어그램
+pdf 참조!
+- 객체를 나눠서 구현하는 회원 저장소 / 할인 정책을 도식화 하는 것
+- 위에서 언급했지만, 이는 runtime, server에 올라갔을 때 동적인 도식표
