--- a/프로젝트(Top Folder)/cp6. 싱글톤 컨테이너/(4) 싱글톤 방식의 주의점.md
+++ b/프로젝트(Top Folder)/cp6. 싱글톤 컨테이너/(4) 싱글톤 방식의 주의점.md
@@ -1,1 +1,124 @@
 <link href="../md_config/style.css" rel="stylesheet">
+
+# 싱글톤 방식의 주의점
+
+- 기본적으로 90% 이상의 경우에 싱글톤으로 구현하게 되어있음
+- 특별하게 life-cycle에 맞춰 관리하는 경우에, 싱글톤으로 설계 안하는 경우가 있기는 함
+- 결론적으로 하나의 인스턴스를 생성하여 공유하기 때문에, State가 존재하면 안됨(Stateless)
+- **`Code-wise 싱글톤일 때 항상!! 무상태로 설계해야 함`**
+
+  - 특정 클라이언트에 의존적인 필드가 있으면 안됨
+  - 특정 클라이언트가 값을 변경할 수 있는 필드가 있으면 안됨!
+  - 가급적 읽기만 하기
+  - 필드 대신에 자바에서 공유되지 않는, 지역변수, 파라미터, ThreadLocal 등을 사용
+  - 스프링 빈의 필드에 공유 값을 설정하면 정말 큰 장애가 발생할 수 있다!!!
+
+- Example
+
+  - JAVA
+
+    ```JAVA
+      public class StatefulService {
+
+          private int price; // 상태를 유지하는 필드
+
+          public void order(String name, int price) {
+              System.out.println("name = " + name + " price = " + price);
+              this.price = price; // 여기가 문제!
+          }
+
+          public int getPrice() {
+              return price;
+          }
+      }
+
+      ...
+
+      @Test
+      @DisplayName("상태를 가지는 싱글톤, 스레드에서 문제되는 경우")
+      void statefulServiceSingleton() {
+          ApplicationContext ac = new AnnotationConfigApplicationContext(TestConfig.class);
+          StatefulService statefulService1 = ac.getBean(StatefulService.class);
+          StatefulService statefulService2 = ac.getBean(StatefulService.class);
+
+          //Thread A 사용자 10000원 주문
+          statefulService1.order("userA", 10000);
+
+          //Thread B 사용자 20000원 주문
+          statefulService2.order("userB", 20000);
+
+          //Thread A 사용자 자신의 주문 금액 조회 - 조회 이전에 B가 끼어들어 주문
+          int priceA = statefulService1.getPrice();
+          System.out.println("priceA = " + priceA); // 20000이 나옴, 10000이 아니라 -> 인스턴스가 스프링 싱글톤 컨테이너로 같기 때문
+
+          Assertions.assertThat(statefulService1.getPrice()).isEqualTo(20000);
+      }
+    ```
+
+  - Result - Terminal
+    ```TEXT
+      name = userA price = 10000
+      name = userB price = 20000
+      priceA = 20000
+    ```
+  - Explained
+    - 최대한 단순히 설명하기 위해, 실제 쓰레드는 사용하지 않음(필요하면 Java 스레드 부분 찾아볼 것)
+      - ThreadA가 사용자A 코드를 호출하고 ThreadB가 사용자B 코드를 호출한다 가정
+        1. StatefulService 의 price 필드는 공유되는 필드인데, 특정 클라이언트가 값을 변경한다.
+        2. 사용자A의 주문금액은 10000원이 되어야 하는데, 20000원이라는 결과가 나왔다.
+  - 실무에서 이런 경우를 종종 보는데, 이로인해 정말 해결하기 어려운 큰 문제들이 터진다.(몇년에 한번씩 꼭 만난다.)
+  - **`진짜 공유필드는 조심해야 한다! 스프링 빈은 항상 무상태(stateless)로 설계하자`** -> 싱글톤이기 때문에 인스턴스변수가 공유되는 형식으로 되는 것
+
+<br>
+
+- Example - Refactoring
+
+  - 저장하지 않고 서비스쪽으로 바로 값을 보내서 그쪽에서 local 변수로 찍어서 사용하는 방식 등으로 해결
+  - JAVA
+
+    ```JAVA
+      public class StatefulService {
+
+      //    private int price; // 상태를 유지하는 필드
+
+          public int order(String name, int price) {
+              System.out.println("name = " + name + " price = " + price);
+      //        this.price = price; // 여기가 문제!
+              return price;
+          }
+
+      //    public int getPrice() {
+      //        return price;
+      //    }
+      }
+
+      ...
+
+      @Test
+      @DisplayName("상태를 가지는 싱글톤, 스레드에서 문제되는 경우")
+      void statefulServiceSingleton() {
+          ApplicationContext ac = new AnnotationConfigApplicationContext(TestConfig.class);
+          StatefulService statefulService1 = ac.getBean(StatefulService.class);
+          StatefulService statefulService2 = ac.getBean(StatefulService.class);
+
+          //Thread A 사용자 10000원 주문
+          int localPriceA = statefulService1.order("userA", 10000);
+
+          //Thread B 사용자 20000원 주문
+          int localPriceB = statefulService2.order("userB", 20000);
+
+          //Thread A 사용자 자신의 주문 금액 조회 - 조회 이전에 B가 끼어들어 주문
+          //        int priceA = statefulService1.getPrice();
+          System.out.println("localPriceA = " + localPriceA); // 20000이 나옴, 10000이 아니라 -> 인스턴스가 스프링 싱글톤 컨테이너로 같기 때문
+
+          Assertions.assertThat(localPriceA).isEqualTo(10000);
+      }
+    ```
+
+  - Result - Terminal
+
+    ```TEXT
+      name = userA price = 10000
+      name = userB price = 20000
+      localPriceA = 10000
+    ```
